<resources>
    <string name="app_name">PDF Reader 2021</string>
    <string name="loading">loading</string>
    <string name="pdf_reader">pdf <b>reader</b></string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="shared">Shared</string>
    <string name="tools">Tools</string>
    <string name="folders">Folders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="move_to_folder">Move To Folder</string>
    <string name="create_the_folder_so_you_can_save_your_n_important_documents_in_them">Create the folder so you can save your \n important documents in them</string>
    <string name="create_now">Create Now</string>
    <string name="enter_folder_name">Enter Name</string>
    <string name="get_premium">Get Premium</string>
    <string name="share_by_me">Share by me</string>
    <string name="share_with_me">Share with me</string>
    <string name="pick_images_from_galary">Pick Images from Galary</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="enter_file_name">Enter File name</string>
    <string name="select_file">Select File</string>
    <string name="text_type">text/plain</string>
    <string name="install_file_manager">Please install a File Manager</string>
    <string name="pdf_suffix" translatable="false">_pdf</string>
    <string name="file_selectedd">File selected</string>
    <string name="extension_not_supported">Sorry! This file type is not supported currently.</string>
    <string name="file_created">File Created</string>
    <string name="word_pdf">Word to PDF</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="remove_ad">Remove Ads</string>
    <string name="file_reducer">File Reducer</string>
    <string name="password_pro">Password Protector</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="privacy">Privacy Policy</string>
    <string name="quit">Quit</string>
    <string name="pdf_type">application/pdf</string>
    <string name="pdf_added_to_list">Files added in list</string>
    <string name="pdf_removed_from_list">File removed from list</string>
    <string name="pdf_merged">Files Merged</string>
    <string name="snackbar_viewAction">View File</string>
    <string name="file_access_error">file cannot be merged</string>
    <string name="comperession_rate">Comperession Rate</string>
    <string name="enter_compression_rate">Enter Compression Rate</string>
    <string name="number_only">0123456789</string>
    <string name="details">details</string>
    <string name="file_info">\n  File Name : %1$s \n\n  Path : %2$s \n\n  Size : %3$s \n\n  Date Modified %4$s</string>
    <string name="ok">Ok</string>
    <string name="remove_pages_error">Remove Pages</string>
    <string name="convert_error">File conversion error</string>
    <string name="compress_info">Congratulations! Your PDF is compressed: \n Original PDF Size : %s \n Compressed PDF Size: %s</string>
    <string name="last_updated">Last Updated</string>
    <string name="created_date">Created Date</string>
    <string name="size">Size</string>
    <string name="a_to_z">A To Z</string>
    <string name="z_to_a">Z To A</string>
    <string name="import_files">Import Files</string>
    <string name="search_file_here">Search File Here</string>
    <string name="premium">Premium</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="secure_files">Secure Files</string>
    <string name="not_encrypted">File not encrypted</string>
    <string name="encrypted_file">_encrypted.pdf</string>
    <string name="filter_file_name">%s_%s.jpg</string>
    <string name="title_activity_premium_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pass_pro_text">Password Protect</string>
    <string name="secure_files_with_password_protect">Secure Files with Password Protect</string>
    <string name="reduce_file_size">Reduce File Size</string>
    <string name="redcue_file_size_of_your_large_pdfs">Redcue File size of your large PDFs</string>
    <string name="merge_files">Merge Files</string>
    <string name="unlimited_merge_files">Unlimited File Merge Option</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="enjoy_ad_free_version_of_app">Enjoy Ad Free Version of App</string>
    <string name="upgrade_premium">Upgrade to Premium</string>
    <string name="pdf_editing_tools">PDF Editing Tools</string>
    <string name="seacure_your_important_files_with_using_n_our_password_protect_feature">Seacure your important files with using \n our password protect feature</string>
    <string name="add_files_to_folder">Add Files to Folder</string>
    <string name="share_files">Share Files</string>
    <string name="share_your_files_with_your_friends_and_n_family_with_tap_of_a_button">Share your files with your friends and\n family with tap of a button</string>
    <string name="try_this_feature_to_secure_receipts_text_files_photos_documents_reports_and_lot_more_with_password_protect">Try this feature to secure receipts, text files, photos, documents reports, and lot more with Password Protect</string>
    <string name="pdf_password_protect">PDF Password Protect</string>
    <string name="recent">Recent</string>
    <string name="edited">Edited</string>
    <string name="backword"><![CDATA[<]]></string>
    <string name="forword"><![CDATA[>]]></string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="privact_text">This application utilizes External Storage Read and Write consent and camera to scan documents. We are not utilizing these consent to store information it\'s only for users to utilize application capacities</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="default_notification_channel_id">com.pdfreader.pdfviewer.pdfeditor.pdfcreator.securepdf</string>

</resources>