<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".FileReducerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrangePrimaryDark"
        android:theme="@style/toolTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/colorWhite" />

    <Button
        android:id="@+id/selectFilesBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/blue_color_btn"
        android:text="@string/select_file"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/compressionRateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/comperession_rate"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/selectFilesBtn"
        app:layout_constraintTop_toBottomOf="@+id/selectFilesBtn" />

    <EditText
        android:id="@+id/compressionRateEd"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/custom_bg_edittxt"
        android:digits="@string/number_only"
        android:hint="@string/enter_compression_rate"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="2"
        android:paddingStart="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/selectFilesBtn"
        app:layout_constraintStart_toStartOf="@+id/compressionRateTv"
        app:layout_constraintTop_toBottomOf="@+id/compressionRateTv" />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/compressionRateEd"
        app:layout_constraintStart_toStartOf="@+id/compressionRateEd"
        app:layout_constraintTop_toBottomOf="@+id/compressionRateEd"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text=""/>


    <Button
        android:id="@+id/convertPdf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/blue_color_btn"
        android:enabled="false"
        android:text="@string/convert_to_pdf"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/selectFilesBtn"
        app:layout_constraintStart_toStartOf="@+id/selectFilesBtn"
        app:layout_constraintTop_toBottomOf="@+id/resultTv" />


</androidx.constraintlayout.widget.ConstraintLayout>