<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".SecurePdfActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/colorGrayDark" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/files"
        android:textColor="@color/colorGrayDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/filterTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:drawablePadding="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:text="Sort By"
        android:textColor="@color/colorGrayDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_filter"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/filterTv"
        app:layout_constraintStart_toStartOf="@+id/filterTv"
        app:layout_constraintTop_toBottomOf="@+id/filterTv" />

    <EditText
        android:id="@+id/searchEd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/searh_edtext_bg"
        android:elevation="@dimen/_5sdp"
        android:hint="@string/search_file_here"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textSize="14sp"
        android:maxLength="20"
        android:paddingStart="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        android:autofillHints="@string/app_name"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/secureFileBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEd" />

    <Button
        android:id="@+id/secureFileBg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/blue_color_btn"
        android:enabled="false"
        android:text="@string/secure_files"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/adlayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adlayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/ad_bg"
        >

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/native_ad_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />

        <RelativeLayout
            android:id="@+id/admobBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />

        <include
            android:id="@+id/adlayout2"
            layout="@layout/ad_loading2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>